adding fine + inpainting

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ NEO4J_USER='username of the bd'
 NEO4J_PASSWORD=AUTO
 NEO4J_AUTH=none
 NO_AUTH=True
+MODEL_NAME=runwayml/stable-diffusion-inpainting
+INSTANCE_DIR=/content/dreambooth_inpainting_in
+OUTPUT_DIR=/content/dreambooth_inpainting_out
+CLASS_DIR=/content/dreambooth_inpainting_class_images
